# avp2_launcher

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
assets/: MyApp.rc  pattern.psd
src/: main.c  registry.c  utils.c
src/Screens/: advanced.c  display.c  serverlist.c  splash.c
src/include/: constants.h  loader.h  registry.h  types.h  utils.h
src/include/Screens/: advanced.h  display.h  serverlist.h  splash.h
